--- a/src/NuGet.Services.Messaging/Web.config
+++ b/src/NuGet.Services.Messaging/Web.config
@@ -11,9 +11,67 @@
 
   <appSettings>
 
-    <add key="ida:Tenant" value="msnuget.onmicrosoft.com" />
-    <add key="ida:Audience" value="https://msnuget.onmicrosoft.com/NuGet.Services.Messaging" />
+    <add key="ida:GraphResourceId" value="https://graph.windows.net" />
 
+    <add key="ida:Tenant" value="sorintestb2c.onmicrosoft.com" />
+    <add key="ida:Audience" value="https://sorintestb2c.onmicrosoft.com/NuGet.Services.Messaging" />
+
+    <add key="ida:ClientId" value="844244ea-950a-4137-ba27-8d7eefec0526" />
+    <add key="ida:AppKey" value="" />
+    <add key="ida:AADInstance" value="https://te.cpim.windows.net/{0}" />
+
+    
+    <!-- Storage Options -->
+    
+    <!-- Local File System -->
+    <add key="Local.Storage.Directory" value="C:\Users\rebro\Documents\GitHub\NuGet\NuGet.Services.Email\Storage"/>
+    
+    
+    <!-- Azure Storage Blob -->
+    <add key="Storage.Primary" value=""/>
+    <add key="Storage.Container.Messages" value="messages"/>
+    
+    
+    
   </appSettings>
   
- </configuration>
+   <runtime>
+  
+         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  
+               <dependentAssembly>
+  
+                     <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+  
+                     <bindingRedirect oldVersion="0.0.0.0-5.6.3.0" newVersion="5.6.3.0" />
+  
+               </dependentAssembly>
+  
+               <dependentAssembly>
+  
+                     <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+  
+                     <bindingRedirect oldVersion="0.0.0.0-5.6.3.0" newVersion="5.6.3.0" />
+  
+               </dependentAssembly>
+  
+               <dependentAssembly>
+  
+                     <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+  
+                     <bindingRedirect oldVersion="0.0.0.0-5.6.3.0" newVersion="5.6.3.0" />
+  
+               </dependentAssembly>
+  
+               <dependentAssembly>
+  
+                     <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+  
+                     <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+  
+               </dependentAssembly>
+  
+         </assemblyBinding>
+  
+   </runtime>
+</configuration>
