Deleted old sample JSON files.

--- a/MessagingServiceTests/app.config
+++ b/MessagingServiceTests/app.config
@@ -1,5 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="ida:GraphResourceId" value="https://graph.windows.net" />
+    <add key="ida:Tenant" value="sorintestb2c.onmicrosoft.com" />
+    <add key="ida:Audience" value="https://sorintestb2c.onmicrosoft.com/NuGet.Services.Messaging" />
+    <add key="ida:ClientId" value="844244ea-950a-4137-ba27-8d7eefec0526" />
+    <add key="ida:AppKey" value="" />
+    <add key="ida:AADInstance" value="https://te.cpim.windows.net/{0}" />
+    <!-- Storage Options -->
+    <!-- Primary Storage:  Azure Blob -->
+    <add key="Storage.Primary" value="" />
+    <add key="Storage.Container.Messages" value="" />
+    <!-- Secondary Storage:  File System -->
+    <add key="Storage.Secondary" value="true" />
+    <add key="Storage.Directory.BaseAddress" value="http://localhost:8000/messages" />
+    <add key="Storage.Directory.Path" value="C:\NuGet.Services.Messaging\Messages" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -20,4 +37,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
