--- a/src/NuGet.Services.Messaging/Web.config
+++ b/src/NuGet.Services.Messaging/Web.config
@@ -23,16 +23,16 @@
     
     <!-- Storage Options -->
     
-    <!-- Local File System -->
-    <add key="Local.Storage.Directory" value="C:\Users\rebro\Documents\GitHub\NuGet\NuGet.Services.Email\Storage"/>
+    <!-- Primary Storage:  Azure Blob -->
+    <add key="Storage.Primary" value="" />
+    <add key="Storage.Container.Messages" value="" />
     
-    
-    <!-- Azure Storage Blob -->
-    <add key="Storage.Primary" value=""/>
-    <add key="Storage.Container.Messages" value="messages"/>
-    
-    
-    
+
+    <!-- Secondary Storage:  File System -->
+    <add key="Storage.Secondary" value="true" />
+    <add key="Storage.Directory.BaseAddress" value="http://localhost:8000/messages" />
+    <add key="Storage.Directory.Path" value="C:\NuGet.Services.Messaging\Messages"/>
+
   </appSettings>
   
    <runtime>
