--- a/MessagingServiceTests/packages.config
+++ b/MessagingServiceTests/packages.config
@@ -6,10 +6,14 @@
   <package id="Microsoft.Data.Edm" version="5.6.2" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.6.2" targetFramework="net45" />
   <package id="Microsoft.Data.Services.Client" version="5.6.2" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Testing" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="NuGet.Services.Metadata.Catalog" version="3.0.185-r-master" targetFramework="net45" />
   <package id="NuGet.Versioning" version="1.0.3" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.2" targetFramework="net45" />
   <package id="VDS.Common" version="1.3.0" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net45" />
