Remoted sensitive data from config files.

--- a/src/NuGet.Services.Messaging/Web.config
+++ b/src/NuGet.Services.Messaging/Web.config
@@ -11,14 +11,14 @@
 
   <appSettings>
 
-    <add key="ida:GraphResourceId" value="https://graph.windows.net" />
+    <add key="ida:GraphResourceId" value="" />
 
-    <add key="ida:Tenant" value="sorintestb2c.onmicrosoft.com" />
-    <add key="ida:Audience" value="https://sorintestb2c.onmicrosoft.com/NuGet.Services.Messaging" />
+    <add key="ida:Tenant" value="" />
+    <add key="ida:Audience" value="" />
 
-    <add key="ida:ClientId" value="844244ea-950a-4137-ba27-8d7eefec0526" />
+    <add key="ida:ClientId" value="" />
     <add key="ida:AppKey" value="" />
-    <add key="ida:AADInstance" value="https://te.cpim.windows.net/{0}" />
+    <add key="ida:AADInstance" value="" />
 
     
     <!-- Storage Options -->
