Changed Asserts to new proper email formats.  Added validation checks and tests. Added extra parameter to EditCredential call.

--- a/MessagingServiceTests/MessagingServiceTests.csproj
+++ b/MessagingServiceTests/MessagingServiceTests.csproj
@@ -138,27 +138,41 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+    <None Include="sampleJSON\ChangeEmailNoticeSamples\ChangeEmailNotice_InvalidBrand.json" />
     <None Include="sampleJSON\ChangeEmailNoticeSamples\ChangeEmailNotice_MissingNewEmail.json" />
     <None Include="sampleJSON\ChangeEmailNoticeSamples\ChangeEmailNotice_ExtraParameter.json" />
     <None Include="sampleJSON\ChangeEmailNoticeSamples\ChangeEmailNotice.json" />
+    <None Include="sampleJSON\ContactOwnersSamples\ContactOwners_InvalidBrand.json" />
     <None Include="sampleJSON\ContactOwnersSamples\ContactOwners_ExtraParameter.json" />
     <None Include="sampleJSON\ContactOwnersSamples\ContactOwners_MissingPackageId.json" />
     <None Include="sampleJSON\ContactOwnersSamples\ContactOwners.json" />
+    <None Include="sampleJSON\ContactSupportSamples\ContactSupport_InvalidBrand.json" />
     <None Include="sampleJSON\ContactSupportSamples\ContactSupport_ExtraParameter.json" />
     <None Include="sampleJSON\ContactSupportSamples\ContactSupport_MissingPackageId.json" />
     <None Include="sampleJSON\ContactSupportSamples\ContactSupport.json" />
+    <None Include="sampleJSON\EditCredentialSamples\EditCredential_InvalidAction.json" />
+    <None Include="sampleJSON\EditCredentialSamples\EditCredential_InvalidType.json" />
+    <None Include="sampleJSON\EditCredentialSamples\EditCredential_InvalidBrand.json" />
     <None Include="sampleJSON\EditCredentialSamples\EditCredential_ExtraParameter.json" />
     <None Include="sampleJSON\EditCredentialSamples\EditCredential_MissingUsername.json" />
     <None Include="sampleJSON\EditCredentialSamples\EditCredential.json" />
+    <None Include="sampleJSON\InvitePackageOwnerSamples\InvitePackageOwner_InvalidBrand.json" />
     <None Include="sampleJSON\InvitePackageOwnerSamples\InvitePackageOwner_ExtraParameter.json" />
     <None Include="sampleJSON\InvitePackageOwnerSamples\InvitePackageOwner_MissingPackageId.json" />
     <None Include="sampleJSON\InvitePackageOwnerSamples\InvitePackageOwner.json" />
+    <None Include="sampleJSON\NewAccountWelcomeSamples\NewAccountWelcome_InvalidEmail.json" />
+    <None Include="sampleJSON\NewAccountWelcomeSamples\NewAccountWelcome_InvalidBrand.json" />
     <None Include="sampleJSON\NewAccountWelcomeSamples\NewAccountWelcome_MissingEmail.json" />
     <None Include="sampleJSON\NewAccountWelcomeSamples\NewAccountWelcome_ExtraParameter.json" />
     <None Include="sampleJSON\NewAccountWelcomeSamples\NewAccountWelcome.json" />
+    <None Include="sampleJSON\ReportAbuseSamples\ReportAbuse_InvalidOwnersContacted.json" />
+    <None Include="sampleJSON\ReportAbuseSamples\ReportAbuse_InvalidEmail.json" />
+    <None Include="sampleJSON\ReportAbuseSamples\ReportAbuse_InvalidBrand.json" />
     <None Include="sampleJSON\ReportAbuseSamples\ReportAbuse_ExtraParameter.json" />
     <None Include="sampleJSON\ReportAbuseSamples\ReportAbuse_MissingPackageId.json" />
     <None Include="sampleJSON\ReportAbuseSamples\ReportAbuse.json" />
+    <None Include="sampleJSON\ResetPasswordInstructionsSamples\ResetPasswordInstructions_InvalidAction.json" />
+    <None Include="sampleJSON\ResetPasswordInstructionsSamples\ResetPasswordInstructions_InvalidBrand.json" />
     <None Include="sampleJSON\ResetPasswordInstructionsSamples\ResetPasswordInstructions_ExtraParameter.json" />
     <None Include="sampleJSON\ResetPasswordInstructionsSamples\ResetPasswordInstructions_MissingAction.json" />
     <None Include="sampleJSON\ResetPasswordInstructionsSamples\ResetPasswordInstructions.json" />
