--- a/src/NuGet.Services.Messaging/NuGet.Services.Messaging.csproj
+++ b/src/NuGet.Services.Messaging/NuGet.Services.Messaging.csproj
@@ -146,11 +146,15 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Resources\AADResource.cs" />
     <Compile Include="Brand\NuGet\Constants.cs" />
     <Compile Include="Brand\PowerShellGallery\Constants.cs" />
     <Compile Include="Brand\IConstants.cs" />
     <Compile Include="FakeFileStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\IResource.cs" />
+    <Compile Include="Resources\ResourceManager.cs" />
+    <Compile Include="Resources\SQLResource.cs" />
     <Compile Include="ServiceHelper.cs" />
     <Compile Include="ServiceImpl.cs" />
     <Compile Include="Startup.cs" />
