Implemented file storage queue file. Added email validation tests. Adjusted tests for new HTML formats and to use new file queue.

--- a/MessagingServiceTests/MessagingServiceTests.csproj
+++ b/MessagingServiceTests/MessagingServiceTests.csproj
@@ -138,6 +138,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+    <None Include="sampleJSON\ChangeEmailNoticeSamples\ChangeEmailNotice_InvalidEmail.json" />
     <None Include="sampleJSON\ChangeEmailNoticeSamples\ChangeEmailNotice_InvalidBrand.json" />
     <None Include="sampleJSON\ChangeEmailNoticeSamples\ChangeEmailNotice_MissingNewEmail.json" />
     <None Include="sampleJSON\ChangeEmailNoticeSamples\ChangeEmailNotice_ExtraParameter.json" />
